Trying to prevent code overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ div.shell {
   width: 900px;
 }
 
-div.sourceCode {
+code {
   overflow: hidden;
 }
 
